--- a/Abrar-Chapter2/Tasks/T_finding_navigator_items.dita
+++ b/Abrar-Chapter2/Tasks/T_finding_navigator_items.dita
@@ -3,25 +3,35 @@
 <task id="T_finding_navigator_items">
     <title>Finding Navigator items</title>
     <shortdesc>The Navigator shows all the managed systems that run on an operating system and this
-        list can get very long. Use the Find tool to locate Navigator items based on properties such
-        as IP address or associated situations.</shortdesc>
+        list can get very long. Use the <uicontrol>Find</uicontrol> tool to locate
+            <uicontrol>Navigator</uicontrol> items based on properties such as IP address or
+        associated situations.</shortdesc>
+    <prolog>
+        <author>Abrar Ahmed Syed</author>
+        <metadata>
+            <keywords>
+                <indexterm><keyword>Finding Navigator items</keyword><keyword>Navigator Physical
+                        view</keyword><keyword>Custom Navigator views</keyword><keyword>Navigator
+                        Logical view</keyword></indexterm>
+            </keywords>
+        </metadata>
+    </prolog>
     <taskbody>
         <context>
             <p>Take these steps to find a Navigator item:</p>
-            <sectiondiv><b>Procedure</b></sectiondiv>
         </context>
         <steps>
             <step>
-                <cmd>Click <image href="../Images/I_find_icon.png" id="image_unr_rbg_vxb"/> Find in
-                    the Navigator toolbar.</cmd>
+                <cmd>Click <image href="../Images/I_find_icon.png" id="image_unr_rbg_vxb"/>
+                    <uicontrol>Find</uicontrol> in the Navigator toolbar.</cmd>
             </step>
             <step>
                 <cmd>If the item you want to search for is in a different Navigator view, select it
-                    from the <b>For Navigator</b><image href="../Images/I_list_box.png"
-                        id="image_gm5_5bg_vxb"/>  list.</cmd>
+                    from the <uicontrol>For Navigator</uicontrol><image
+                        href="../Images/I_list_box.png" id="image_gm5_5bg_vxb"/> list.</cmd>
             </step>
             <step>
-                <cmd>Enter the values of the properties to search by:</cmd>
+                <cmd>Enter the <userinput>values of the properties</userinput> to search by:</cmd>
                 <choicetable frame="all" relcolwidth="1* 1*" id="choicetable_vhy_kcg_vxb">
                     <chhead>
                         <choptionhd>Properties</choptionhd>
@@ -77,10 +87,10 @@
                     <chrow>
                         <choption>Associated Situation Name</choption>
                         <chdesc>
-                            <p>Enter a situation name to find the Navigator items that the situation
-                                is associated with. (For an alert indicator to display in the
-                                Navigator for a situation that has become true, the situation must
-                                be associated with a Navigator item.)</p>
+                            <p>Enter a <userinput>situation name</userinput> to find the Navigator
+                                items that the situation is associated with. (For an alert indicator
+                                to display in the Navigator for a situation that has become true,
+                                the situation must be associated with a Navigator item.)</p>
                         </chdesc>
                     </chrow>
                 </choicetable>
@@ -90,25 +100,29 @@
                     if applicable) but to exclude the child Navigator items (attribute level),
                     select the <image href="../Images/I_include_checkbox_icon.png"
                         id="image_xst_pdg_vxb"/>
-                    <b>Include only managed system items</b> check box.</cmd>
+                    <uicontrol>Include only managed system items</uicontrol> check box.</cmd>
             </step>
             <step>
                 <cmd>If you want to control the number of Navigator items to list per page in the
-                    find results, click Advanced and specify the page size. The default is 100 rows
-                    per page. By reducing the number, you can have the results displayed more
-                    quickly and in smaller, more manageable pages; then move through the pages with
-                        <image href="../Images/I_page_down_icon.png" id="image_qxd_vdg_vxb"/> Page
-                    down and <image href="../Images/I_page_up_icon.png" id="image_vrs_vdg_vxb"/>
-                    Page up. By increasing the number, you increase the processing time but you can
-                    see all the results on one table page.</cmd>
+                    find results, click <uicontrol>Advanced</uicontrol> and specify the page size.
+                    The default is 100 rows per page. By reducing the number, you can have the
+                    results displayed more quickly and in smaller, more manageable pages; then move
+                    through the pages with <image href="../Images/I_page_down_icon.png"
+                        id="image_qxd_vdg_vxb"/>
+                    <uicontrol>Page down</uicontrol> and <image href="../Images/I_page_up_icon.png"
+                        id="image_vrs_vdg_vxb"/><uicontrol> Page up</uicontrol>. By increasing the
+                    number, you increase the processing time but you can see all the results on one
+                    table page.</cmd>
             </step>
             <step>
-                <cmd>Click <b>Find</b>. The <b>Find results</b> area is appended to the window with
-                    a list of Navigator items that meet the criteria.</cmd>
+                <cmd>Click <uicontrol>Find</uicontrol>. The <uicontrol>Find results</uicontrol> area
+                    is appended to the window with a list of Navigator items that meet the
+                    criteria.</cmd>
             </step>
             <step>
-                <cmd>Click a Navigator item in the Find results area and click Switch to after
-                    selecting any or none of these check boxes:</cmd>
+                <cmd>Click a Navigator item in the Find results area and click
+                        <uicontrol>Switch</uicontrol> to after selecting any or none of these check
+                    boxes:</cmd>
                 <choices id="choices_hhh_cfg_vxb">
                     <choice><image href="../Images/I_include_checkbox_icon.png"
                             id="image_tzf_2fg_vxb"/><b>Open workspace in new window</b><p>Keep the
@@ -117,8 +131,8 @@
                             your browser is configured for tabbed windows).</p></choice>
                     <choice><image href="../Images/I_include_checkbox_icon.png"
                             id="image_sv4_gfg_vxb"/><b>Close after switching to
-                            workspace</b><p>Close the Find window after opening the workspace for
-                            the selected Navigator item.</p></choice>
+                            workspace</b><p>Close the <wintitle>Find</wintitle> window after opening
+                            the workspace for the selected Navigator item.</p></choice>
                 </choices>
             </step>
         </steps>
@@ -126,78 +140,93 @@
             opened.</result>
         <example id="example_ukd_nfg_vxb">In this example, the find criteria looks on the MySystem
             computers for Navigator items with associated situations that have "CPU" in the
-            situation name.<p>Find criteria<simpletable frame="all" relcolwidth="1* 1*"
-                    id="simpletable_ylh_njg_vxb">
-                    <sthead>
-                        <stentry>Properties</stentry>
-                        <stentry>Value</stentry>
-                    </sthead>
-                    <strow>
-                        <stentry>IP Address</stentry>
-                        <stentry/>
-                    </strow>
-                    <strow>
-                        <stentry>Hostname</stentry>
-                        <stentry><image href="../Images/I_abc==_icon.png" id="image_jm4_yjg_vxb"
-                                /><codeph>'MySystem?'</codeph></stentry>
-                    </strow>
-                    <strow>
-                        <stentry>SMFID Name</stentry>
-                        <stentry/>
-                    </strow>
-                    <strow>
-                        <stentry>Sysplex Name</stentry>
-                        <stentry/>
-                    </strow>
-                    <strow>
-                        <stentry>Product Code</stentry>
-                        <stentry/>
-                    </strow>
-                    <strow>
-                        <stentry>Managed System Name</stentry>
-                        <stentry/>
-                    </strow>
-                    <strow>
-                        <stentry>Associated Situation Name</stentry>
-                        <stentry><image href="../Images/I_abc==_icon.png" id="image_rk4_1kg_vxb"
-                                /><codeph>'*CPU*'</codeph></stentry>
-                    </strow>
-                </simpletable></p><p><b>Find results</b></p><simpletable frame="all"
-                relcolwidth="1* 1* 1*" id="simpletable_pld_2kg_vxb">
-                <sthead>
-                    <stentry>Item</stentry>
-                    <stentry>View</stentry>
-                    <stentry>Item Path</stentry>
-                </sthead>
-                <strow>
-                    <stentry>Process</stentry>
-                    <stentry>Physical</stentry>
-                    <stentry>
-                        <p><codeph>WindowsOS/MySystem1/Windows Systems/Enterprise</codeph></p>
-                    </stentry>
-                </strow>
-                <strow>
-                    <stentry>Processor</stentry>
-                    <stentry>Physical</stentry>
-                    <stentry>
-                        <p><codeph>WindowsOS/MySystem1/Windows Systems/Enterprise</codeph></p>
-                    </stentry>
-                </strow>
-                <strow>
-                    <stentry>Process</stentry>
-                    <stentry>Physical</stentry>
-                    <stentry>
-                        <p><codeph>WindowsOS/MySystem2/Windows Systems/Enterprise</codeph></p>
-                    </stentry>
-                </strow>
-                <strow>
-                    <stentry>Processor</stentry>
-                    <stentry>Physical</stentry>
-                    <stentry>
-                        <p><codeph>WindowsOS/MySystem2/Windows Systems/Enterprise</codeph></p>
-                    </stentry>
-                </strow>
-            </simpletable></example>
+            situation name.<p>
+                <table frame="all" id="table_qkc_fzb_wxb">
+                    <title>Find criteria</title>
+                    <tgroup cols="2">
+                        <colspec colname="c1" colnum="1" colwidth="1*"/>
+                        <colspec colname="c2" colnum="2" colwidth="1*"/>
+                        <thead>
+                            <row>
+                                <entry>Properties</entry>
+                                <entry>Value</entry>
+                            </row>
+                        </thead>
+                        <tbody>
+                            <row>
+                                <entry>IP Address</entry>
+                                <entry/>
+                            </row>
+                            <row>
+                                <entry>Hostname</entry>
+                                <entry><image href="../Images/I_abc==_icon.png"
+                                        id="image_qgx_jzb_wxb"/><codeph>'MySystem?'</codeph></entry>
+                            </row>
+                            <row>
+                                <entry>SMFID Name</entry>
+                                <entry/>
+                            </row>
+                            <row>
+                                <entry>Sysplex Name</entry>
+                                <entry/>
+                            </row>
+                            <row>
+                                <entry>Product Code</entry>
+                                <entry/>
+                            </row>
+                            <row>
+                                <entry>Managed System Name</entry>
+                                <entry/>
+                            </row>
+                            <row>
+                                <entry>Associated Situation Name</entry>
+                                <entry><image href="../Images/I_abc==_icon.png"
+                                        id="image_rwk_kzb_wxb"/><codeph>'*CPU*'</codeph></entry>
+                            </row>
+                        </tbody>
+                    </tgroup>
+                </table>
+            </p><table frame="all" id="table_hx5_nzb_wxb">
+                <title>Find results</title>
+                <tgroup cols="3">
+                    <colspec colname="c1" colnum="1" colwidth="1*"/>
+                    <colspec colname="c2" colnum="2" colwidth="1*"/>
+                    <colspec colname="c3" colnum="3" colwidth="1*"/>
+                    <thead>
+                        <row>
+                            <entry>Item</entry>
+                            <entry>View</entry>
+                            <entry>Item Path</entry>
+                        </row>
+                    </thead>
+                    <tbody>
+                        <row>
+                            <entry>Process</entry>
+                            <entry>Physical</entry>
+                            <entry><codeph>WindowsOS/MySystem1/Windows
+                                Systems/Enterprise</codeph></entry>
+                        </row>
+                        <row>
+                            <entry>Processor</entry>
+                            <entry>Physical</entry>
+                            <entry><codeph>WindowsOS/MySystem1/Windows
+                                Systems/Enterprise</codeph></entry>
+                        </row>
+                        <row>
+                            <entry>Process</entry>
+                            <entry>Physical</entry>
+                            <entry><codeph>WindowsOS/MySystem2/Windows
+                                Systems/Enterprise</codeph></entry>
+                        </row>
+                        <row>
+                            <entry>Processor</entry>
+                            <entry>Physical</entry>
+                            <entry><codeph>WindowsOS/MySystem2/Windows
+                                Systems/Enterprise</codeph></entry>
+                        </row>
+                    </tbody>
+                </tgroup>
+            </table></example>
         <postreq id="postreq_ylr_4kg_vxb">You can keep the window open to switch between one found
             Navigator item and another or to change the criteria and find other Navigator
             items.</postreq>
