--- a/Abrar-Chapter2/Concepts/C_navigator_overview.dita
+++ b/Abrar-Chapter2/Concepts/C_navigator_overview.dita
@@ -3,6 +3,14 @@
 <concept id="C_navigator_overview">
     <title>Navigator overview</title>
     <shortdesc></shortdesc>
+    <prolog>
+        <author>Abrar Ahmed Syed</author>
+        <metadata>
+            <keywords>
+                <indexterm><keyword>Navigator Overview</keyword></indexterm>
+            </keywords>
+        </metadata>
+    </prolog>
     <conbody>
         <p>The Navigator provides a hierarchical view of your enterprise. At the highest level you
             can get a high level overview of the status of your monitored environment. From there
