--- a/Abrar-Chapter2/Tasks/T_removing_an_offline_managed_system_navigator_item.dita
+++ b/Abrar-Chapter2/Tasks/T_removing_an_offline_managed_system_navigator_item.dita
@@ -1,12 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="T_removing_an_offline_managed_system_navigator_item">
-    <title>Procedure</title>
+    <title>Removing an offline managed system Navigator item</title>
+    <shortdesc>Use the Managed System Status workspace to clear offline managed systems from the
+        Navigator view.</shortdesc>
+    <prolog>
+        <author>Abrar Ahmed Syed</author>
+        <metadata>
+            <keywords>
+                <indexterm><keyword>Removing an offline managed system Navigator
+                        item</keyword><keyword>Removing an offline managed system
+                    </keyword></indexterm>
+            </keywords>
+        </metadata>
+    </prolog>
     <taskbody>
+        <context>
+            <p>When a monitoring agent goes offline or its host name gets changed, its branch is
+                dimmed in the Navigator, as in the following example, and its status is shown as
+                    <codeph>*OFFLINE</codeph> in any table view that uses the Current Managed
+                Systems status query.</p>
+            <table frame="all" id="table_cvj_5mw_vxb">
+                <title>Hierarchy of monitored enterprise</title>
+                <tgroup cols="6">
+                    <colspec colname="c1" colnum="1" colwidth="2.27*"/>
+                    <colspec colname="newCol2" colnum="2" colwidth="2.55*"/>
+                    <colspec colname="newCol3" colnum="3" colwidth="1*"/>
+                    <colspec colname="c2" colnum="4" colwidth="4.14*"/>
+                    <colspec colname="newCol5" colnum="5" colwidth="2.55*"/>
+                    <colspec colname="newCol6" colnum="6" colwidth="2.55*"/>
+                    <tbody>
+                        <row>
+                            <entry namest="c1" nameend="newCol6"><image
+                                    href="../Images/I_enterprise_bullet_type.png"
+                                    id="image_epg_zmw_vxb"/>Enterprise</entry>
+                        </row>
+                        <row>
+                            <entry/>
+                            <entry namest="newCol2" nameend="newCol6"><image
+                                    href="../Images/I_platform_bullet_type.png"
+                                    id="image_kwr_cnw_vxb"/>Windows Systems</entry>
+                        </row>
+                        <row>
+                            <entry/>
+                            <entry/>
+                            <entry namest="newCol3" nameend="newCol6"><image
+                                    href="../Images/I_system_bullet_type.png" id="image_lmw_dnw_vxb"
+                                />My Computer</entry>
+                        </row>
+                        <row>
+                            <entry/>
+                            <entry/>
+                            <entry/>
+                            <entry namest="c2" nameend="newCol6"><image
+                                    href="../Images/I_universal_agent_icon.png"
+                                    id="image_enb_hnc_wxb"/>Universal Agent</entry>
+                        </row>
+                        <row>
+                            <entry/>
+                            <entry/>
+                            <entry/>
+                            <entry namest="c2" nameend="newCol6"><image
+                                    href="../Images/I_agent_bullet_type.png" id="image_jth_vnc_wxb"
+                                />Windows OS</entry>
+                        </row>
+                    </tbody>
+                </tgroup>
+            </table>
+            <p>The Enterprise Navigator item has a Managed System Status workspace that you can use
+                to check for any offline managed systems and remove them from the Navigator view.
+                When the monitoring agent comes online again, it will reappear. Use these steps to
+                clear an offline entry:</p>
+        </context>
         <steps>
             <step>
                 <cmd><image href="../Images/I_enterprise_bullet_type.png" id="image_bvd_cwg_vxb"
-                    />Click the Enterprise Navigator item. The default workspace opens.</cmd>
+                    />Click the <uicontrol>Enterprise Navigator</uicontrol> item. The default
+                    workspace opens.</cmd>
             </step>
             <step>
                 <cmd>Click <image href="../Images/I_workspace_gallery_icon.png"
